--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 05:24:00 PM</p>
+    <p class="lastupdate">09/04/2020 05:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">102.5&#176;F</td>
+        <td class="data">101.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">102.5&#176;F</td>
+        <td class="data">101.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">102.5&#176;F</td>
+        <td class="data">101.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.0&#176;F</td>
+        <td class="data">45.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.827 inHg (-0.046)</td>
+        <td class="data">29.828 inHg (-0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph N (0&#176;)</td>
+        <td class="data">6 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">87.0&#176;F</td>
+        <td class="data">86.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">36%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -443,7 +443,7 @@
           7
         </td>
         <td class="data new_row hilo_week">
-          1<br/>
+          0<br/>
           187
         </td>
         <td class="data new_row hilo_month">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 2 hours, 37 minutes</td>
+      <td class="data">3 days, 2 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 2 hours, 37 minutes</td>
+      <td class="data">3 days, 2 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
