--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 05:29:00 PM</p>
+    <p class="lastupdate">09/04/2020 05:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">101.9&#176;F</td>
+        <td class="data">101.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">101.9&#176;F</td>
+        <td class="data">101.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">101.9&#176;F</td>
+        <td class="data">101.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.5&#176;F</td>
+        <td class="data">46.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">15%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.828 inHg (-0.038)</td>
+        <td class="data">29.826 inHg (-0.037)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph NNE (22&#176;)</td>
+        <td class="data">4 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">86.3&#176;F</td>
+        <td class="data">85.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:21:52 PM">
-            10</span><br/>
-          15
+          <span title="05:29:29 PM">
+            11</span><br/>
+          355
         </td>
         <td class="data new_row hilo_week">
           <span title="04:15:00 PM (Monday)">
@@ -444,11 +444,11 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          187
+          188
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          11
+          10
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 2 hours, 42 minutes</td>
+      <td class="data">3 days, 2 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 2 hours, 42 minutes</td>
+      <td class="data">3 days, 2 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
